@@ -1,3 +1,14 @@
+2000-10-06  Dave Brolley  <brolley@redhat.com>
+
+	* utils-gen.scm (-gen-ifld-extract-base): Compute start position as
+	ifld-start + ifld-word-offset.
+	(gen-ifld-extract): Check adata-integral-insn? before checking whether
+	the field is beyond the base number of bits.
+	(gen-define-ifields): Use a base-length of 32 if adata-integral-insn?.
+	(gen-extract-ifields): Ditto.
+	* gas-test.scm (gentest): Generate backslashes before '[' and ']'
+	characters in the regular expression.
+
 2000-10-02  Frank Ch. Eigler  <fche@redhat.com>
 
 	* desc-cpu.scm: (gen-operand-decls): Emit MAX_OPERANDS as a
